# battery_stat

./: .clang-format  .gitignore  BatStat.cpp  BatStat.h  CMakeLists.txt  Makefile  README.md  battery_stat.pro  main.cpp  options.cpp  options.h
cmake/: gitversion.cmake  gitversion.h.in
src/: BatStat.cpp  gitversion.h  main.cpp  options.cpp  options.h
